Add a second flavour 'independent' and adjust screen title and news source being sent in API request

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Top Headlines</string>
+    <string name="app_name_bbc">BBC News</string>
+    <string name="app_name_independent">Independent News</string>
 </resources>
